--- a/lbk_netfthlls.html
+++ b/lbk_netfthlls.html
@@ -137,7 +137,7 @@ div.csl-indent {
 <div id="fig-5" class="quarto-figure quarto-figure-center anchored">
 <figure class="figure">
 <p><img src="https://github.com/smiergahttu/LBKfoothillsPL/blob/main/fig5-2.gif?raw=true" class="img-fluid figure-img"></p>
-<p></p><figcaption class="figure-caption">Figure&nbsp;5: 5. Simulated spatiotemporal density of LBK activity.</figcaption><p></p>
+<p></p><figcaption class="figure-caption">Figure&nbsp;5: Simulated spatiotemporal density of LBK activity.</figcaption><p></p>
 </figure>
 </div>
 </section>
